cmake_minimum_required(VERSION 3.26)
project(leetcode)

set(CMAKE_CXX_STANDARD 11)

add_executable(main main.cpp)
add_executable(demo289 src/demo289.cpp)

add_executable(demo383 src/demo383.cpp)
add_executable(demo219 src/demo219.cpp)
add_executable(demo17 src/demo17.cpp)
add_executable(demo46 src/demo46.cpp)
add_executable(demo39 src/demo39.cpp)
add_executable(demo52 src/demo52.cpp)
add_executable(demo57 src/demo57.cpp)
add_executable(demo452 src/demo452.cpp)
add_executable(demo73 src/demo73.cpp)
add_executable(demo71 src/demo71.cpp)
add_executable(demo155 src/demo155.cpp)
add_executable(demo150 src/demo150.cpp)
add_executable(demo224 src/demo224.cpp)
add_executable(reverse-number src/reverse-number.cpp)
add_executable(demo92 src/demo92.cpp)
add_executable(demo206 src/demo206.cpp)
add_executable(demo146 src/demo146.cpp)
add_executable(demo61_150 src/demo61_150.cpp)
add_executable(sort src/utils/MySort.cpp)
add_executable(demo86 src/demo86.cpp)
add_executable(demo25 src/demo25.cpp)
add_executable(demo104 src/demo104.cpp)
add_executable(demo226 src/demo226.cpp)
add_executable(demo124 src/demo124.cpp)